fix: balance calc bug